# AiMetr

./: .gitattributes  .gitignore  LICENSE  README.md  main.js  package-lock.json  package.json  preload.js
.github/workflows/: ci.yml
daemon/: claude_usage_daemon.py  config.example.json  multi_provider_daemon.py  requirements.txt
demo/: index.html
firmware/: CMakeLists.txt  flash.sh  sdkconfig.defaults
firmware/main/: CMakeLists.txt  ble_receiver.cpp  ble_receiver.h  config.h  display.cpp  display.h  idf_component.yml  main.cpp  providers.h
firmware/main/mascots/: clawd_sprites.h  codex_sprites.h  deepseek_sprites.h  mascots.cpp  mascots.h
firmware/main/ui/: ui_main.cpp  ui_main.h  ui_overview.cpp  ui_provider.cpp  ui_tasks.cpp
scripts/: generate-tray-icon.js
src/: ble.js  cost.js  fetch.js  poller.js  secrets.js  store.js  tracker.js
src/providers/: base.js  claude.js  deepseek.js  lmstudio.js  ollama.js  openai.js
test/: core.test.js  cost.test.js
ui/dashboard/: dashboard.css  dashboard.js  index.html
ui/dashboard/tabs/: all-tab.js  provider-tab.js
ui/pet/: clawd_sprites.js  mascots.js  pet.css  pet.html  pet.js  sprite_data.js  sprites.js
ui/settings/: settings.js
